// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store:middlewares:documents:utils getOpenExtensionsFilters returns a view open filter 1`] = `
Array [
  Object {
    "extensions": Array [
      "vitv",
      "vipv",
      "vidv",
      "vidp",
      "vimv",
      "vikv",
      "vihv",
      "viga",
      "viba",
      "pus03",
      "pus05",
      "pus11",
      "pus12",
      "pus13",
      "pus14",
      "pus15",
      "pus18",
      "pus19",
      "pus140",
      "pus142",
      "pus144",
      "pusmme",
    ],
    "name": "Any VIMA views",
  },
  Object {
    "extensions": Array [
      "vitv",
    ],
    "name": "TextView",
  },
  Object {
    "extensions": Array [
      "vipv",
    ],
    "name": "PlotView",
  },
  Object {
    "extensions": Array [
      "vidv",
    ],
    "name": "DynamicView",
  },
  Object {
    "extensions": Array [
      "vidp",
    ],
    "name": "DecommutedPacketView",
  },
  Object {
    "extensions": Array [
      "vimv",
    ],
    "name": "MimicView",
  },
  Object {
    "extensions": Array [
      "vikv",
    ],
    "name": "PacketView",
  },
  Object {
    "extensions": Array [
      "vihv",
    ],
    "name": "HistoryView",
  },
  Object {
    "extensions": Array [
      "viga",
    ],
    "name": "GroundAlarmView",
  },
  Object {
    "extensions": Array [
      "viba",
    ],
    "name": "OnboardAlarmView",
  },
  Object {
    "extensions": Array [
      "pus03",
    ],
    "name": "PUS03View",
  },
  Object {
    "extensions": Array [
      "pus05",
    ],
    "name": "PUS05View",
  },
  Object {
    "extensions": Array [
      "pus11",
    ],
    "name": "PUS11View",
  },
  Object {
    "extensions": Array [
      "pus12",
    ],
    "name": "PUS12View",
  },
  Object {
    "extensions": Array [
      "pus13",
    ],
    "name": "PUS13View",
  },
  Object {
    "extensions": Array [
      "pus14",
    ],
    "name": "PUS14View",
  },
  Object {
    "extensions": Array [
      "pus15",
    ],
    "name": "PUS15View",
  },
  Object {
    "extensions": Array [
      "pus18",
    ],
    "name": "PUS18View",
  },
  Object {
    "extensions": Array [
      "pus19",
    ],
    "name": "PUS19View",
  },
  Object {
    "extensions": Array [
      "pus140",
    ],
    "name": "PUS140View",
  },
  Object {
    "extensions": Array [
      "pus142",
    ],
    "name": "PUS142View",
  },
  Object {
    "extensions": Array [
      "pus144",
    ],
    "name": "PUS144View",
  },
  Object {
    "extensions": Array [
      "pusmme",
    ],
    "name": "PUSMMEView",
  },
]
`;

exports[`store:middlewares:documents:utils getSaveExtensionsFilters returns a view save filter 1`] = `
Array [
  Array [
    Object {
      "extensions": Array [
        "vipv",
      ],
      "name": "PlotView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "vitv",
      ],
      "name": "TextView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "vidv",
      ],
      "name": "DynamicView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "vidp",
      ],
      "name": "DecommutedPacketView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "vihv",
      ],
      "name": "HistoryView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "vikv",
      ],
      "name": "PacketView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "vimv",
      ],
      "name": "MimicView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "viga",
      ],
      "name": "GroundAlarmView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "viba",
      ],
      "name": "OnboardAlarmView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "pus11",
      ],
      "name": "PUS11View",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "pus14",
      ],
      "name": "PUS14View",
    },
  ],
]
`;
